# minda-keypoint-2

./: .gitignore  README.md  annotations1.xml  annotations2.xml  annotations3.xml  convert_dataset.py  count_dataset.py  merge_dataset_images.py  pyproject.toml  roi_config.json
src/: analysis.py  augment.py  convert_cvat_to_yolo_pose.py  merge_datasets.py  model_analysis.py  prepare_yolo_dataset.py  push_detection.py  push_detection2.py  push_detection3.py  push_detection4.py  push_detection_finger.py  push_detection_finger2.py  push_detection_rl_sample.py  test_inference.py  visualize.py
